--- a/pwa/ios/css/nav.css
+++ b/pwa/ios/css/nav.css
@@ -71,13 +71,14 @@ a.nav-icon:visited {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
+  /* Put padding here instead of on header. Otherwise won't center */
+  padding: 0.75rem;
 }
 
 .back-btn {
   display: flex;
   align-items: center;
   color: var(--ios-blue);
-  margin-left: 0.125rem;
   cursor: pointer;
 }
 
@@ -88,6 +89,5 @@ a.nav-icon:visited {
 
 .top-nav-bar-title {
   text-align: center;
-  font-weight: 700;
-  font-size: 1.125rem;
+  text-transform: capitalize;
 }
